# naotk

./: README.md  meson.build
example/: main.c  meson.build
naotk/: input.h  list.c  meson.build  rlgl.c  util.c  util.h  window.c
naotk/include/ntk/: list.h  types.h  window.h
naotk/include/ntk/widgets/: button.h  row_container.h  widget.h
naotk/interaction/: input.c  shapes.c  shapes.h  ui.c  ui.h
naotk/renderer/: renderer.c  renderer.h
naotk/widgets/: button.c  row_container.c
